force-app/main/default/objects/Route_MAT__c/Route_MAT__c.object-meta.xml
<CustomObject>
    <description>The Object is to capture the latest MAT (Moving Annual Total) Values for CM (Current Month) and LM (Last Month)
for the rolling 12 month period from that month.</description>
    <label>Route-MAT</label>
    <nameField>
        <displayFormat>RM-{000000}</displayFormat>
        <label>Route-MAT Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route-MAT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>