force-app/main/default/objects/Route_MAT__c/fields/CM_QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CM_QF_Revenue__c</fullName>
    <formula>CM_QF_Revenue_Dom__c  +  CM_QF_Revenue_Intl__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM QF Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>