force-app/main/default/objects/Route_MAT__c/fields/LM_QF_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LM_QF_Revenue__c</fullName>
    <formula>LM_QF_Revenue_Dom__c  +  LM_QF_Revenue_Intl__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LM QF Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>