force-app/main/default/objects/Route_MAT__c/fields/LM_QF_Share__c.field-meta.xml
<CustomField>
    <fullName>LM_QF_Share__c</fullName>
    <formula>IF( LM_Total_Revenue__c = 0,NULL, ( LM_QF_Revenue__c / LM_Total_Revenue__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LM QF Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>