force-app/main/default/objects/Route_MAT__c/fields/QF_Share_Intl_CM__c.field-meta.xml
<CustomField>
    <fullName>QF_Share_Intl_CM__c</fullName>
    <formula>IF(LM_Total_Revenue_Intl__c = 0,NULL,(CM_QF_Revenue_Intl__c  /  LM_Total_Revenue_Intl__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Share Intl CM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>