force-app/main/default/objects/Route_MAT__c/listViews/All_Reds.listView-meta.xml
<ListView>
    <fullName>All_Reds</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>QCI__c</columns>
    <columns>NAME</columns>
    <columns>Mat_Indicator_Dom__c</columns>
    <columns>MAT_Indicator_Intl__c</columns>
    <columns>Share_Var_DOM__c</columns>
    <columns>Share_Var_Intl__c</columns>
    <columns>QF_Share_Dom_CM__c</columns>
    <columns>CM_QF_Revenue_Dom__c</columns>
    <columns>CM_Total_Revenue_Dom__c</columns>
    <columns>CM_QF_Revenue_Intl__c</columns>
    <columns>CM_Total_Revenue_Intl__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Share_Var_DOM__c</field>
        <operation>lessThan</operation>
        <value>0.5</value>
    </filters>
    <filters>
        <field>Share_Var_Intl__c</field>
        <operation>lessThan</operation>
        <value>0.5</value>
    </filters>
    <label>All Reds</label>
</ListView>